# Io

./: .gitignore  CNAME  CODE_OF_CONDUCT.MD  Cargo.toml  LICENSE.MD  README.MD  build.rs  security_audit.md  tests.sh  verify_tests.sh
.cargo/: config.toml
docs/: README.md  contributing.md
docs/advanced/: memory-management.md
docs/core/: functions.md
docs/examples/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/performance/: optimization.md
docs/reference/: index.md
docs/stdlib/: index.md
docs/testing/: index.md
examples/: calculator.io  hello_world.io
src/: error.rs  lexer.rs  lib.rs  prelude.rs  source_location.rs  symbol_table.rs  visitor.rs
src/analysis/: mod.rs
src/ast/: expression.rs  mod.rs  module.rs  node.rs  operator.rs  source_location.rs  statement.rs  types.rs  visitor.rs
src/codegen/: async_gen.rs  debug.rs  llvm.rs  mod.rs  passes.rs  types.rs  wasm.rs
src/compiler/: control_flow.rs  ir_gen.rs  mod.rs
src/debug/: breakpoint.rs  mod.rs
src/diagnostics/: mod.rs
src/doc/: generator.rs
src/error/: handler.rs
src/lsp/: mod.rs
src/macro_system/: mod.rs
src/memory/: mod.rs
src/module/: mod.rs
src/optimizer/: const_fold.rs  const_prop.rs  mod.rs
src/package/: mod.rs  registry.rs
src/parser/: grammar.lalrpop  mod.rs
src/pattern/: mod.rs
src/runtime/: channel.rs  mod.rs  task.rs  thread_pool.rs
src/semantic/: analyzer.rs  mod.rs  scope.rs
src/stdlib/: cache.rs  (+8 more)
tests/: integration.rs  integration_tests.io  integration_tests.rs  mod.rs
website/: README.MD  app.js  index.html  style.css
(+52 files in other folders)
