[package]
name = "io-lang"
version = "0.1.0"
edition = "2021"
authors = ["GameCooler19"]
description = "Io Programming Language Implementation"

[dependencies]
nom = "7.1"
lalrpop-util = "0.20"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
parking_lot = "0.12"
backtrace = "0.3"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.5"
walkdir = "2.3"
semver = "1.0"
futures = "0.3"
pin-utils = "0.1"

[build-dependencies]
lalrpop = "0.19"
walkdir = "2"  # For finding source files
